fixed some small styling problems with the vampire worksheet

--- a/actions/templates/actions/vampire_power/_plan.html
+++ b/actions/templates/actions/vampire_power/_plan.html
@@ -7,8 +7,8 @@
 <table>
     <thead>
         <tr>
-            <td>Device (vampire)</td>
-            <td>Slay Method</td>
+            <th>Device (vampire)</th>
+            <th>Slay Method</th>
         </tr>
     </thead>
     <tbody>
