--- a/static/css/style.css
+++ b/static/css/style.css
@@ -537,14 +537,14 @@ Vampire Vampire Vampire Vampire Vampire Vampire Vampire Vampire Vampire Vampire 
     -webkit-border-radius: 5px; 
     border-radius: 5px;
     background-color: #FFF; }
-ul.vampire_worksheet_wizard_nav {
-    display: none;
+#vampire_worksheet_wizard_nav {
     float: right;
     position: absolute;
     right: 0;
+    margin-right: 15px;
     z-index: 1; }
-ul.vampire_worksheet_wizard_nav li { float: left; list-style-type: none; padding: 5px; }
-ul.vampire_worksheet_wizard_nav li .active { border: 1px solid grey; }
+#vampire_worksheet_wizard_nav li { float: left; list-style: none; padding: 3px; }
+#vampire_worksheet_wizard_nav li.active { border: 1px solid grey; padding: 2px; }
 #vampire_worksheet_wizard {
     width: 650px;
     height: 550px;
@@ -555,13 +555,13 @@ ul.vampire_worksheet_wizard_nav li .active { border: 1px solid grey; }
     width: 20000em;
     clear: both;
     position: absolute;
-    list-style-type: none;
     margin-left: -20px; }
 #vampire_directions li { list-style: disc; }
-#vampire_worksheet_wizard .worksheet { padding: 20px 30px; width: 650px; float: left; }
+#vampire_worksheet_wizard .worksheet { padding: 20px 30px; width: 630px; float: left; list-style: none; }
 #vampire_worksheet_wizard .vampire_device_image { float: left; }
 #vampire_worksheet_wizard .vampire_savings_container { float: left; }
 #vampire_worksheet_wizard .vampire_savings { font-size: 1.2em; font-weight: bold; }
+#vampire_worksheet_wizard .buttonset li { list-style: none; }
 #vampire_worksheet_wizard .buttonset .ui-button-text { height: 32px; display: table-cell; vertical-align: middle; }
 #vampire_worksheet_wizard .slayer_tooltip { font-weight: bold; text-align: center; }
 #vampire_worksheet_wizard .slayer_recommended { font-weight: bold; color: #92C139; text-align: center; }
