--- a/templates/rah/feedback_email.html
+++ b/templates/rah/feedback_email.html
@@ -1,6 +1,10 @@
-<b>User: </b>{% if user.is_authenticated %}{{user|safe}}{% else %}Anonymous{% endif %} <br/>
+<b>User: </b>{% if user.is_authenticated %}{{request.user|safe}}{% else %}Anonymous{% endif %} <br/>
 <b>URL: </b>{{feedback.url}} <br/>
 <b>Beta Group: </b>{{feedback.beta_group}} <br/>
 <h3>Comment</h3>
 {{feedback.comment|safe|linebreaks}}
 
+<h4>Additional Info</h4>
+<b>User Agent: </b>{{ request.META.HTTP_USER_AGENT }}
+<b>Real IP: </b>{{ request.META.HTTP_X_REAL_IP }}
+<b>Path Translated: </b>{{ request.META.PATH_TRANSLATED }}
