--- a/templates/rah/profile.html
+++ b/templates/rah/profile.html
@@ -1,60 +1,67 @@
 {% extends "rah/base.html" %}
 {% load records %}
-{% block left_sidebar %}
+
+{% block extralinks %}
+    <link rel="alternate" type="application/atom+xml"  href="{% url user_activity_feed profile.user.id %}" title="Repower at Home User Activity" />
 {% endblock %}
+
 {% block right_content %}
-	<div class="grid_2 alpha">
-		<h1>{{profile_user.get_full_name}}</h1>
-		{% if profile.location %}
-			<b>From: </b> {{ profile.location }}<br/>
-		{% endif %}
-		{% if profile.total_points %}
-			<b>Points: </b>{{ profile.total_points }}<br/>
-		{% endif %}
-		{% if profile.building_type %}
-	        <b>Home:</b> {{ profile.get_building_type_display }}<br/>
-	    {% endif %}
-	    {% if profile.about %}
-	        <b>About: </b>{{ profile.about }}<br/>
-	    {% endif %}
-		{% if commitment_list %}
-	        <h2>Commitments</h2>
-	        <p>
-	        {% for row in commitment_list %}
-	            <a href="{% url action_detail row.action.slug %}">{{row.action.name}}</a> by {{row.date_committed|date}}<br/>
-	        {% endfor %}
-	        </p>
-	    {% endif %}
-	    {% if teams %}
-	        <h2>Teams</h2>
-	        <p>
-	        {% for group in teams %}
-	            <a href="{{ group.get_absolute_url }}">{{ group.name }}</a><br />
-	        {% endfor %}
-	        </p>
-	    {% endif %}
-	    {% if committed %}
-			<h2>Committed Actions</h2>
-			<p>
-			{% for action in recommended %}
-	            <a href="{% url action_detail action.slug %}">{{action.name}}</a> (+{{action.points}} points)<br/>
-	        {% endfor %}
-			</p>
-	    {% endif %}
-	    {% if completed %}
-	        <h2>Completed Actions</h2>
-	        <p>
-	        {% for action in completed %}
-	            <a href="{% url action_detail action.slug %}">{{action.name}}</a> (+{{action.points}} points)<br/>
-	        {% endfor %}
-	        </p>
-	    {% endif %}
-	    {% if records %}
-	        <h2>Recent Activity</h2>
-	        {% for rec in records %}
-	            {% render_record rec %}
-	        {% endfor %}
-	    {% endif %}
-	</div>
+    <div class="grid_2 alpha">
+        <h1>{{profile_user.get_full_name}}</h1>
+        {% if profile.location %}
+            <b>From: </b> {{ profile.location }}<br/>
+        {% endif %}
+        {% if profile.total_points %}
+            <b>Points: </b>{{ profile.total_points }}<br/>
+        {% endif %}
+        {% if profile.building_type %}
+            <b>Home:</b> {{ profile.get_building_type_display }}<br/>
+        {% endif %}
+        {% if profile.about %}
+            <b>About: </b>{{ profile.about }}<br/>
+        {% endif %}
+        {% if commitment_list %}
+            <h2>Commitments</h2>
+            <p>
+            {% for row in commitment_list %}
+                <a href="{% url action_detail row.action.slug %}">{{row.action.name}}</a> by {{row.date_committed|date}}<br/>
+            {% endfor %}
+            </p>
+        {% endif %}
+        {% if teams %}
+            <h2>Teams</h2>
+            <p>
+            {% for group in teams %}
+                <a href="{{ group.get_absolute_url }}">{{ group.name }}</a><br />
+            {% endfor %}
+            </p>
+        {% endif %}
+        {% if committed %}
+            <h2>Committed Actions</h2>
+            <p>
+            {% for action in recommended %}
+                <a href="{% url action_detail action.slug %}">{{action.name}}</a> (+{{action.points}} points)<br/>
+            {% endfor %}
+            </p>
+        {% endif %}
+        {% if completed %}
+            <h2>Completed Actions</h2>
+            <p>
+            {% for action in completed %}
+                <a href="{% url action_detail action.slug %}">{{action.name}}</a> (+{{action.points}} points)<br/>
+            {% endfor %}
+            </p>
+        {% endif %}
+        {% if records %}
+            <h2>Recent Activity
+                <a class="atom_link" href="{% url user_activity_feed profile.user.id %}">
+                    <img src="{{ MEDIA_URL }}images/theme/rss.png" alt="atom feed" />
+                </a>
+            </h2>
+            {% for rec in records %}
+                {% render_record rec %}
+            {% endfor %}
+        {% endif %}
+    </div>
 {% endblock %}
 {% block js %}page_profile{% endblock %}
