--- a/actions/templates/actions/vampire_power/_directions.html
+++ b/actions/templates/actions/vampire_power/_directions.html
@@ -1,5 +1,5 @@
 <h2>Tools of the trade</h2>
-<p>
+<div>
     There are three ways stop vampire power:
     <ul>
         <li>Unplug the vampire when you’re not using it</li>
@@ -8,7 +8,7 @@
         <li>Attach it to a smart power strip, which automatically cuts power to vampires 
             (<a href="#smart_power">learn more</a>)</li>
     </ul>
-</p>
+</div>
 <p>
     In the next slides, you’ll meet the vampires in your home. For each vampire, we’ve highlighted 
     our recommended slaying method. If you plan on using one of the other tactics, go ahead and select it.
