--- a/templates/comments/list.html
+++ b/templates/comments/list.html
@@ -13,6 +13,7 @@
                     {% get_flag_form for comment %}
                 {% endif %}
             </div>
+            <span class="point"></span>
             <div class="author">
                 <img class="gravatar" src="{{ comment.user.get_profile.get_gravatar_url }}" alt="user gravatar" />
                 <br class="clear" />
