--- a/actions/templates/actions/vampire_power/_vampire_worksheet_forms.html
+++ b/actions/templates/actions/vampire_power/_vampire_worksheet_forms.html
@@ -1,6 +1,6 @@
 <div id="vampire_worksheet">
     <ul id="vampire_worksheet_wizard_nav">
-        <li><a id="t0" href="#get_started"></a></li>
+        <li class="hidden"><a id="t0" href="#get_started"></a></li>
         <li><a id="t1" href="#directions">Guide</a></li>
         {% for field in vampire_worksheet_form %}
             <li><a id="t{{ forloop.counter|add:"1" }}" href="#{{ field.name }}">{{ forloop.counter }}</a></li>
