--- a/templates/records/mag_request_party_host_info.html
+++ b/templates/records/mag_request_party_host_info.html
@@ -3,5 +3,5 @@
     {% safe_user_link record.user %} requested info about hosting a house party
 {% endblock %}
 {% block activity_date %}
-    on {{ record.created|date:"M j, Y" }}{% if record.points %} (+{{ record.points }} points){% endif %}
+    on {{ record.created|date }}{% if record.points %} (+{{ record.points }} points){% endif %}
 {% endblock %}
