--- a/groups/templates/groups/group_detail.html
+++ b/groups/templates/groups/group_detail.html
@@ -112,7 +112,7 @@
                         <td>{{ user.actions_committed|default_if_none:0 }}</td>
                         <td>{{ user.actions_completed|default_if_none:0 }}</td>
                         <td>{{ user.total_points}}</td>
-                        <td>{{ user.last_active|date:"M j, Y" }}</td>
+                        <td>{{ user.last_active|date }}</td>
                     </tr>
                 {% endfor %}
             </tbody>
