--- a/templates/records/comment_mark_useful.html
+++ b/templates/records/comment_mark_useful.html
@@ -3,5 +3,5 @@
     {% safe_user_link record.user %} marked a comment as useful
 {% endblock %}
 {% block activity_date %}
-    on {{ record.created|date:"M j, Y" }}{% if record.points %} (+{{ record.points }} points){% endif %}
+    on {{ record.created|date }}{% if record.points %} (+{{ record.points }} points){% endif %}
 {% endblock %}
