--- a/templates/records/group_create.html
+++ b/templates/records/group_create.html
@@ -4,5 +4,5 @@
     <a href="{{ content_object.get_absolute_url }}">{{ content_object.name }}</a>, 
 {% endblock %}
 {% block activity_date %}
-    on {{ record.created|date:"M j, Y" }}{% if record.points %} (+{{ record.points }} points){% endif %}
+    on {{ record.created|date }}{% if record.points %} (+{{ record.points }} points){% endif %}
 {% endblock %}
