--- a/templates/records/mag_invite_friend.html
+++ b/templates/records/mag_invite_friend.html
@@ -3,5 +3,5 @@
     {% safe_user_link record.user %} invited a friend to join Repower at Home
 {% endblock %}
 {% block activity_date %}
-    on {{ record.created|date:"M j, Y" }}{% if record.points %} (+{{ record.points }} points){% endif %}
+    on {{ record.created|date }}{% if record.points %} (+{{ record.points }} points){% endif %}
 {% endblock %}
