--- a/actions/templates/actions/vampire_power/_directions.html
+++ b/actions/templates/actions/vampire_power/_directions.html
@@ -4,9 +4,9 @@
     <ul>
         <li>Unplug the vampire when you’re not using it</li>
         <li>Attach it to a power strip, and turn that power strip off when you’re done using it 
-            (<a href="#conventional_power">learn more</a>)</li>
+            (<a class="tooltip" href="{% url power_strip_help %}">learn more</a>)</li>
         <li>Attach it to a smart power strip, which automatically cuts power to vampires 
-            (<a href="#smart_power">learn more</a>)</li>
+            (<a class="tooltip" href="{% url smart_power_strip_help %}">learn more</a>)</li>
     </ul>
 </div>
 <p>
